--- a/sm-evaluation-core/pom.xml
+++ b/sm-evaluation-core/pom.xml
@@ -44,8 +44,8 @@
 			<artifactId>tomcat-dbcp</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
 		<!-- scope:test -->
