--- a/shippable.yml
+++ b/shippable.yml
@@ -1,2 +1,7 @@
-# language setting
 language: java
+jdk: oraclejdk7
+cache: true
+
+after_success:
+   - mvn clean cobertura:cobertura
+   - mvn test
