Changed configuration to use HSQLDB

--- a/sm-evaluation-core/pom.xml
+++ b/sm-evaluation-core/pom.xml
@@ -47,6 +47,10 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+		</dependency>
 
 		<!-- scope:test -->
 		<dependency>
