--- a/sm-evaluation-core/src/main/resources/hibernate.properties
+++ b/sm-evaluation-core/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
-hibernate.dialect org.hibernate.dialect.MySQLDialect
-connection.driver_class com.mysql.jdbc.Driver
-connection.url jdbc:mysql://localhost/warehouse
-connection.username warehouse
-connection.password OZLltePmd0KlcjnF9sdD
+hibernate.dialect org.hibernate.dialect.HSQLDialect
+connection.driver_class org.hsqldb.jdbcDriver
+connection.url jdbc:hsqldb:mem:sm-evaluation
+connection.username sa
+connection.password
 
 hibernate.show_sql true
 hibernate.format_sql true
