--- a/sm-evaluation-base/pom.xml
+++ b/sm-evaluation-base/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sm.evaluation</groupId>
@@ -25,6 +26,7 @@
 		<slf4j.version>1.7.7</slf4j.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<mysql.version>5.1.30</mysql.version>
+		<postgresql.version>42.1.4</postgresql.version>
 	</properties>
 
 	<dependencyManagement>
@@ -53,6 +55,11 @@
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${postgresql.version}</version>
 			</dependency>
 
 			<!-- dbUnit -->
