--- a/sm-evaluation-core/src/main/resources/hibernate.properties
+++ b/sm-evaluation-core/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
-hibernate.dialect org.hibernate.dialect.HSQLDialect
-connection.driver_class org.hsqldb.jdbcDriver
-connection.url jdbc:hsqldb:mem:sm-evaluation
-connection.username sa
-connection.password
+hibernate.dialect org.hibernate.dialect.PostgreSQL82Dialect
+connection.driver_class org.postgresql.Driver
+connection.url jdbc:postgresql://localhost:5432/warehouse
+connection.username warehouse
+connection.password CxKWvWgRByjaNt9JH7Ml
 
 hibernate.show_sql true
 hibernate.format_sql true
