--- a/sm-evaluation-base/pom.xml
+++ b/sm-evaluation-base/pom.xml
@@ -112,11 +112,12 @@
 				<scope>test</scope>
 			</dependency>
 
-			<!-- hamcrest -->
+			<!-- assertj -->
 			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-all</artifactId>
-				<version>${hamcrest.version}</version>
+				<groupId>org.assertj</groupId>
+				<artifactId>assertj-core</artifactId>
+				<version>3.8.0</version>
+				<scope>test</scope>
 			</dependency>
 
 			<!-- slf4j -->
