--- a/sm-evaluation-base/pom.xml
+++ b/sm-evaluation-base/pom.xml
@@ -27,6 +27,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<mysql.version>5.1.30</mysql.version>
 		<postgresql.version>42.1.4</postgresql.version>
+		<cucumber.version>1.2.5</cucumber.version>
 	</properties>
 
 	<dependencyManagement>
@@ -125,6 +126,26 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
+			</dependency>
+
+			<!-- Cucumber -->
+			<dependency>
+				<groupId>info.cukes</groupId>
+				<artifactId>cucumber-java8</artifactId>
+				<version>${cucumber.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>info.cukes</groupId>
+				<artifactId>cucumber-junit</artifactId>
+				<version>${cucumber.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>info.cukes</groupId>
+				<artifactId>cucumber-spring</artifactId>
+				<version>${cucumber.version}</version>
+				<scope>test</scope>
 			</dependency>
 
 		</dependencies>
