Update properties to use a file HSQLDB

--- a/sm-evaluation-core/src/test/resources/hibernate.properties
+++ b/sm-evaluation-core/src/test/resources/hibernate.properties
@@ -1,16 +1,16 @@
 # PostgreSQL
-hibernate.dialect org.hibernate.dialect.PostgreSQL82Dialect
-connection.driver_class org.postgresql.Driver
-connection.url jdbc:postgresql://localhost:5432/warehouse
-connection.username warehouse
-connection.password CxKWvWgRByjaNt9JH7Ml
+#hibernate.dialect org.hibernate.dialect.PostgreSQL82Dialect
+#connection.driver_class org.postgresql.Driver
+#connection.url jdbc:postgresql://localhost:5432/warehouse
+#connection.username warehouse
+#connection.password CxKWvWgRByjaNt9JH7Ml
 
 # In-Memory
-#hibernate.dialect org.hibernate.dialect.HSQLDialect
-#connection.driver_class org.hsqldb.jdbcDriver
-#connection.url jdbc:hsqldb:mem:sm-evaluation
-#connection.username sa
-#connection.password
+hibernate.dialect org.hibernate.dialect.HSQLDialect
+connection.driver_class org.hsqldb.jdbcDriver
+connection.url jdbc:hsqldb:file:target/sm-evaluation
+connection.username username
+connection.password password
 
 hibernate.show_sql true
 hibernate.format_sql true
