--- a/sm-evaluation-base/pom.xml
+++ b/sm-evaluation-base/pom.xml
@@ -137,7 +137,7 @@
 			<!-- Cucumber -->
 			<dependency>
 				<groupId>info.cukes</groupId>
-				<artifactId>cucumber-java8</artifactId>
+				<artifactId>cucumber-java</artifactId>
 				<version>${cucumber.version}</version>
 				<scope>test</scope>
 			</dependency>
