--- a/sm-evaluation-core/pom.xml
+++ b/sm-evaluation-core/pom.xml
@@ -74,8 +74,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.18.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
