--- a/sm-evaluation-web/pom.xml
+++ b/sm-evaluation-web/pom.xml
@@ -11,9 +11,12 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../sm-evaluation-base</relativePath>
 	</parent>
-
+	
+	<properties>
+		<tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
+	</properties>
+	
 	<dependencies>
-		<!-- scope:compile -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>sm-evaluation-api</artifactId>
@@ -29,27 +32,32 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>taglibs</groupId>
-			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
-			<scope>compile</scope>
-		</dependency>
+		
 	</dependencies>
 
 </project>
