--- a/sm-evaluation-web/src/main/webapp/WEB-INF/web.xml
+++ b/sm-evaluation-web/src/main/webapp/WEB-INF/web.xml
@@ -4,29 +4,38 @@
     version="3.0">
 
 	<display-name>SM Evaluation - Customer Application</display-name>
-
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/web-application-context.xml</param-value>
-	</context-param>
+	
+	<!-- File(s) appended to a request for a URL that is not mapped to a web component -->
+	<welcome-file-list>
+		<welcome-file>customers.xhtml</welcome-file>
+	</welcome-file-list>
+	
+	<!-- Define the JSF servlet (manages the request processing life cycle for JavaServer Faces) -->
+	<servlet>
+		<servlet-name>faces-servlet</servlet-name>
+		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<!-- Map following files to the JSF servlet -->
+	<servlet-mapping>
+		<servlet-name>faces-servlet</servlet-name>
+		<url-pattern>*.xhtml</url-pattern>
+	</servlet-mapping>
 	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
-	<servlet>
-		<servlet-name>mvc-dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value></param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>mvc-dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+	</listener>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/web-application-context.xml</param-value>
+	</context-param>
 
 </web-app>
